# GenshinTools

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  GEMINI.md  README.md  README.zh-CN.md  biome.json  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.test.json  update_data.cmd  vite.config.ts  vitest.config.ts
--alpha/: package.json
--alpha/src-tauri/: tauri.conf.json
.github/workflows/: deploy.yml  release.yml
.husky/: pre-commit
docs/: ArtifactScore.md  GOOD.md  ProductCurrentState.md  ProductRoadmap.md  TODOs.md  layout_system.md  mobile_compatibility_plan.md  shadcn_customization.md  spec.md  testing_plan.md  tour_system_status.md
e2e/: tour.spec.ts
playwright-report/: index.html
scripts/: cleanup_unused_i18n.py  codedump.py  enka.py  fandom.py  generate_enka_map.py  hoyolab.py  models.py  preprocess.py  pyproject.toml  scrape_fandom.py  scrape_hoyolab.py
src/: App.tsx  index.css  main.tsx
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CharacterTooltip.tsx  WeaponTooltip.tsx
src/config/: appNavigation.tsx
src/constants/: theme.ts
src/contexts/: LanguageContext.tsx  ThemeContext.tsx
src/data/: constants.ts  enkaIdMap.ts  goodConversion.ts  goodTypes.ts  i18n-app.ts  i18n-game.ts  i18n-ui.ts  resources.ts  statWeights.ts  types.ts
src/hooks/: use-toast.ts  useGlobalScroll.ts  useMediaQuery.ts
src/lib/: artifactChance.ts  artifactScore.ts  characterFilters.ts  (+13 more)
tests/: i18n.test.ts  setup.ts
(+180 files in other folders)
