[project]
name = "ggartifact-scripts"
version = "0.1.0"
description = "Scripts for GG Artifact"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.49.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.12.5",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__", "**/node_modules"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
